--- a/frontend/public/css/components/_timeline.scss
+++ b/frontend/public/css/components/_timeline.scss
@@ -80,7 +80,7 @@
   .articles {
       li {
         @include breakpoint($breakpoint-tablet) {
-          margin-left: 9.8em;
+          margin-left: 9.6em;
           border-left: 1px solid palette(border, base);
         }
       }
